--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "natrium/lolcat/meganerd and linkman8912 and lord_gabem",
   "license": "GPL-3.0",
   "dependencies": {
+    "axios": "^0.27.2",
     "discord.js": "^13.7.0",
     "jsonp-request": "^0.0.5"
   }
